--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_paypal_payment
+name: flutter_paypal_payment_v2
 description: This package simplifies integrating PayPal payments into your mobile app. Key features include seamless in-app PayPal integration
 version: 2.0.0
 homepage: https://github.com/MazenxELGayar/flutter_paypal_payment_checkout_v2
