--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,14 @@
 name: flutter_paypal_payment_checkout_v2
-description: This package simplifies integrating PayPal payments into your mobile app. Key features include seamless in-app PayPal integration
-version: 2.0.4
+description: A powerful, secure PayPal checkout wrapper for Flutter.
+version: 2.0.5
 homepage: https://github.com/MazenxELGayar/flutter_paypal_payment_checkout_v2
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  windows:
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
